--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/venables/bookshelf-secure-password/issues"
   },
-  "homepage": "https://github.com/venables/bookshelf-secure-password#readme"
+  "homepage": "https://github.com/venables/bookshelf-secure-password#readme",
+  "dependencies": {
+    "bcrypt": "^0.8.4",
+    "lodash": "^3.10.0"
+  }
 }
