--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookshelf-secure-password",
   "version": "1.1.0",
   "description": "A Bookshelf.js plugin for handling secure passwords",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/venables/bookshelf-secure-password#readme",
   "dependencies": {
-    "bcrypt": "^0.8.7",
-    "lodash": "^4.13.1"
+    "bcrypt": "^1.0.2"
   }
 }
