--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,12 @@ node_js:
   - "6"
   - "5"
   - "4"
-after_success: yarn run coverage
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
+env:
+  - TRAVIS=travis CXX=g++-4.8
