--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Bookshelf.js plugin for handling secure passwords",
   "main": "lib/secure-password.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/nyc ./node_modules/.bin/mocha 'test/**/*.spec.js'"
+    "test": "NODE_ENV=test ./node_modules/.bin/nyc ./node_modules/.bin/mocha 'test/**/*.spec.js'",
+    "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "bookshelf": "^0.10.3",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.16",
     "knex": "^0.12.6",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2"
