Only perform asynchronous, save-time hashing
The original default method of hashing passwords during the `setter`
method was not ideal for node async i/o. The benefit of doing it at
set-time was to immediately hash the password, to prevent any leaking.
To add some of this security to the asynchronous method, we use the
bookshelf `virtuals` plugin, and never set `password` on the model
`attributes` hash.  This will prevent the password from being exposed
during a toJSON call (or other).

--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     ]
   },
   "homepage": "https://github.com/venables/bookshelf-secure-password#readme",
-  "dependencies": {
+  "peerDependencies": {
     "bcrypt": "^1.0.2"
   },
   "devDependencies": {
+    "bcrypt": "^1.0.2",
     "bookshelf": "^0.10.3",
     "chai": "^3.5.0",
     "coveralls": "^2.11.16",
