--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha": "^6.2.0",
     "mock-knex": "^0.4.6",
     "nyc": "^14.1.1",
-    "standard": "^13.1.0"
+    "standard": "^13.1.0",
+    "bookshelf-virtuals-plugin": "^0.1.1",
   }
 }
