--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookshelf-secure-password",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "A Bookshelf.js plugin for handling secure passwords",
   "main": "lib/secure-password.js",
   "scripts": {
@@ -34,13 +34,13 @@
   },
   "devDependencies": {
     "bookshelf": "^0.15.1",
+    "bookshelf-virtuals-plugin": "^0.1.1",
     "chai": "^4.2.0",
     "coveralls": "^3.0.6",
     "knex": "^0.19.1",
     "mocha": "^6.2.0",
     "mock-knex": "^0.4.6",
     "nyc": "^14.1.1",
-    "standard": "^13.1.0",
-    "bookshelf-virtuals-plugin": "^0.1.1"
+    "standard": "^13.1.0"
   }
 }
